Fix: Refresh schedule summary overlaps title

--- a/client/app/components/queries/ScheduleDialog.css
+++ b/client/app/components/queries/ScheduleDialog.css
@@ -24,3 +24,11 @@
 .schedule-component datepicker {
   display: block;
 }
+
+.schedule-phrase {
+  display: inline-block;
+}
+
+a.schedule-phrase {
+  cursor: pointer;
+}
